- merged java 11 version into java 8 - made all modules java 8 compatible