@@ -7,10 +7,12 @@ import org.junit.jupiter.api.Test;
 
 import java.time.LocalDate;
 import java.util.List;
+import java.util.NoSuchElementException;
 import java.util.Optional;
+import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 
-import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.jupiter.api.Assertions.assertFalse;
 
 class MuseumTest {
 
@@ -20,7 +22,7 @@ class MuseumTest {
 
         final Museum firstMuseum = museumList.stream()
                 .findFirst()
-                .orElseThrow();
+                .orElseThrow(NoSuchElementException::new);
 
         firstMuseum.forEach(System.out::println);
 
@@ -28,9 +30,9 @@ class MuseumTest {
                 .filter(museum -> Optional.ofNullable(museum).map(Museum::getDateOfOpening)
                         .filter(d -> d.isBefore(LocalDate.now()))
                         .isPresent())
-                .mapMulti(Museum::forEach)
+                .flatMap(museum -> StreamSupport.stream(museum.spliterator(), false))
                 .filter(painting -> painting.ageInYears() > 200)
-                .toList();
+                .collect(Collectors.toList());
 
         System.out.println("paintings = " + paintings);
 
@@ -43,9 +45,10 @@ class MuseumTest {
 
         final Museum firstMuseum = museumList.stream()
                 .findFirst()
-                .orElseThrow();
+                .orElseThrow(NoSuchElementException::new);
 
-        final List<Painting> paintings = StreamSupport.stream(firstMuseum.spliterator(), false).toList();
+        final List<Painting> paintings = StreamSupport.stream(firstMuseum.spliterator(), false)
+                .collect(Collectors.toList());
 
         assertFalse(paintings.isEmpty());
     }
